Added JUnit to web pom.xml

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -91,6 +91,12 @@
                </exclusion>
            </exclusions>
        </dependency>
+        <!-- Test scope dependencies -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
 
    </dependencies>
 
